test/negative/func_wrong_type.mut
# Negative: call function with wrong argument type

def greet(name: str)
    print(name)
end

greet(42)
